# EcoLink-AI

./: .gitignore  ASSUMPTIONS.md  Dockerfile  README.md  evaluate.py  pyproject.toml  requriments.txt  run_experiment.py  train.py
config/: base_config.yaml  smoke_test.yaml
data/: first_dqn_best.pth
data/smoke_test/dqn_seed42/: dqn_smoke_test.pth
paper/: README.md
results/: evaluation_summary.csv  final_evaluation_summary_mean.csv  final_evaluation_summary_std.csv
src/: config_schema.py
src/agents/: baselines.py  dqn_agent.py
src/envs/: d2d_env.py  physics.py
src/utils/: metrics.py
